--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   "dependencies": {
     "dotenv": "^16.6.0",
     "express": "^5.1.0",
-    "mongoose": "^8.16.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.1",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.0.4",
+    "@types/passport": "^1.0.17",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
